# ssc

./: CMakeLists.txt  LICENSE  README.md  compile_flags.txt
include/ssc/: Exception.hpp  FileLock.hpp  Filesystem.hpp  ssc.hpp  stringUtils.hpp
test/: CMakeLists.txt  main.cpp
